--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>🚧 Website Under Construction 🚧</h1>
-    <p>We’re working hard to bring you something amazing.<br>
+    <p>Brian here... I'm working hard to bring you something amazing.<br>
        Please check back soon!</p>
   </div>
 </body>
