Update to downloads test page

--- a/downloads.html
+++ b/downloads.html
@@ -5,4 +5,4 @@
   <title>Downloads</title>
 </head>
 <h1>Downloads</h1>
-<a href="downloads/myfile.txt" download>Download My File</a>
+<a href="downloads/myfile.zip" download>Download myfile.zip</a>
