updates to downloads page

--- a/downloads.html
+++ b/downloads.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Downloads</title>
+  <link rel="stylesheet" href="style_downloads.css">
 </head>
-<h1>Downloads</h1>
-<a href="downloads/myfile.zip" download>Download myfile.zip</a>
+<body>
+    <h1>Downloads</h1>
+    <ul>
+        <li><a href="downloads/myfile.zip" download>Download myfile.zip</a></li>
+        <li><a href="downloads/myfile.zip" download>Download myfile.zip</a></li>
+        <li><a href="downloads/myfile.zip" download>Download myfile.zip</a></li>
+    </ul>
+
+</body>
