--- a/downloads.html
+++ b/downloads.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Downloads</h1>
+    <p>
+        This area will be used to host files for people to download. Generally this will be example code. 
+    </p>
     <ul>
         <li><a href="downloads/myfile.zip" download>Download myfile.zip</a></li>
         <li><a href="downloads/myfile.zip" download>Download myfile.zip</a></li>
