--- a/test_colours.html
+++ b/test_colours.html
@@ -10,7 +10,21 @@
     
     <div class="container2">
         <div class="Title">
-            <p>Title</p>
+            <p>Number 1</p>
+        </div>
+        <div class="Video">
+            <p>Video</p>
+        </div>
+        <div class="Text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+        </div>
+        <div class="Author">
+            <p>By Brian Cullen</p>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="Title">
+            <p>Number 2</p>
         </div>
         <div class="Video">
             <p>Video</p>
