--- a/test_colours.html
+++ b/test_colours.html
@@ -7,33 +7,83 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="container2">
-        <div class="Title">
-            <p>Number 1</p>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="test_colours.html">Colours Test</a>
+    </nav>
+    <h1>Containers and <span>C</span>olours</h1>
+    <div class="card-area">
+        <div class="card">
+            <div class="Title">
+                <p>Number 1</p>
+            </div>
+            <div class="Video">
+                <p>Video</p>
+            </div>
+            <div class="Text">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita iusto repudiandae odio ex dolorum autem provident harum, porro quia sint perferendis maiores? Maiores, sint? Libero accusamus et inventore doloribus.
+                </p>
+            </div>
+            <div class="Author">
+                <p>By Brian Cullen</p>
+            </div>
         </div>
-        <div class="Video">
-            <p>Video</p>
+        <div class="card">
+            <div class="Title">
+                <p>Number 2</p>
+            </div>
+            <div class="Video">
+                <p>Video</p>
+            </div>
+            <div class="Text">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+            </div>
+            <div class="Author">
+                <p>By Brian Cullen</p>
+            </div>
         </div>
-        <div class="Text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+        <div class="card">
+            <div class="Title">
+                <p>Number 3</p>
+            </div>
+            <div class="Video">
+                <p>Test</p>
+            </div>
+            <div class="Text">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+            </div>
+            <div class="Author">
+                <p>By Brian Cullen</p>
+            </div>
         </div>
-        <div class="Author">
-            <p>By Brian Cullen</p>
+        <div class="card">
+            <div class="Title">
+                <p>Number 4</p>
+            </div>
+            <div class="Video">
+                <p>Test</p>
+            </div>
+            <div class="Text">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+            </div>
+            <div class="Author">
+                <p>By Brian Cullen</p>
+            </div>
         </div>
-    </div>
-    <div class="container2">
-        <div class="Title">
-            <p>Number 2</p>
-        </div>
-        <div class="Video">
-            <p>Video</p>
-        </div>
-        <div class="Text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
-        </div>
-        <div class="Author">
-            <p>By Brian Cullen</p>
+        <div class="card">
+            <div class="Title">
+                <p>Number 5</p>
+            </div>
+            <div class="Video">
+                <p>Test</p>
+            </div>
+            <div class="Text">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+            </div>
+            <div class="Author">
+                <p>By Brian Cullen</p>
+            </div>
         </div>
     </div>
 
