--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+        <a href="index.html">Home</a>
+        <a href="test_colours.html">Colours Test</a>
+    </nav>
   <div class="container">
     <h1>🚧 Website Under Construction 🚧</h1>
     <p>Brian here... I'm working hard to bring you something amazing.<br>
