--- a/test_colours.html
+++ b/test_colours.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
+        <a href="index.html">Home</a>
         <a href="test_colours.html">Colours Test</a>
     </nav>
     <h1>Containers and <span>C</span>olours</h1>
@@ -18,7 +18,7 @@
                 <p>Number 1</p>
             </div>
             <div class="Video">
-                <p>Video</p>
+                <iframe src="https://www.youtube-nocookie.com/embed/2IV08sP9m3U?si=-lYC-2WVp8c1QFiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="Text">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!
