added bento heading

--- a/test_colours.html
+++ b/test_colours.html
@@ -86,6 +86,7 @@
             </div>
         </div>
     </div>
+    <h2>Bento Box Layout</h2>
     <div class="bento-area">
         <div class="bento">
             <div class="box box1">1</div>
