--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
   <nav>
-        <a href="index.html">Home</a>
-        <a href="test_colours.html">Colours Test</a>
-    </nav>
+      <ul>
+          <li class="home-li"><a href="index.html" class="active-link">Home</a></li>
+          <li><a href="test_colours.html">Colours Test</a></li>
+          <li><a href="test_colours.html">Login</a></li>
+      </ul>
+  </nav>
   <div class="container">
     <h1>🚧 Website Under Construction 🚧</h1>
     <p>Brian here... I'm working hard to bring you something amazing.<br>
