--- a/test_colours.html
+++ b/test_colours.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="test_colours.html">Colours Test</a>
+        <ul>
+            <li class="home-li"><a href="index.html">Home</a></li>
+            <li><a href="test_colours.html" class="active-link">Colours Test</a></li>
+            <li><a href="test_colours.html" class="accent-link">Login</a></li>
+        </ul>
     </nav>
     <h1>Containers and <span>C</span>olours</h1>
     <div class="card-area">
