--- a/test_colours.html
+++ b/test_colours.html
@@ -14,92 +14,93 @@
             <li><a href="test_colours.html" class="accent-link">Login</a></li>
         </ul>
     </nav>
-    <h1>Containers and <span>C</span>olours</h1>
-    <div class="card-area">
-        <div class="card">
-            <div class="Title">
-                <p>Number 1</p>
+    <div class="MainContent">
+        <h1>Containers and <span>C</span>olours</h1>
+        <div class="card-area">
+            <div class="card">
+                <div class="Title">
+                    <p>Number 1</p>
+                </div>
+                <div class="Video">
+                    <iframe src="https://www.youtube-nocookie.com/embed/2IV08sP9m3U?si=-lYC-2WVp8c1QFiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="Text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita iusto repudiandae odio ex dolorum autem provident harum, porro quia sint perferendis maiores? Maiores, sint? Libero accusamus et inventore doloribus.
+                    </p>
+                </div>
+                <div class="Author">
+                    <p>By Brian Cullen</p>
+                </div>
             </div>
-            <div class="Video">
-                <iframe src="https://www.youtube-nocookie.com/embed/2IV08sP9m3U?si=-lYC-2WVp8c1QFiW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card">
+                <div class="Title">
+                    <p>Number 2</p>
+                </div>
+                <div class="Video">
+                    <p>Video</p>
+                </div>
+                <div class="Text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+                </div>
+                <div class="Author">
+                    <p>By Brian Cullen</p>
+                </div>
             </div>
-            <div class="Text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita iusto repudiandae odio ex dolorum autem provident harum, porro quia sint perferendis maiores? Maiores, sint? Libero accusamus et inventore doloribus.
-                </p>
+            <div class="card">
+                <div class="Title">
+                    <p>Number 3</p>
+                </div>
+                <div class="Video">
+                    <p>Test</p>
+                </div>
+                <div class="Text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+                </div>
+                <div class="Author">
+                    <p>By Brian Cullen</p>
+                </div>
             </div>
-            <div class="Author">
-                <p>By Brian Cullen</p>
+            <div class="card">
+                <div class="Title">
+                    <p>Number 4</p>
+                </div>
+                <div class="Video">
+                    <p>Test</p>
+                </div>
+                <div class="Text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+                </div>
+                <div class="Author">
+                    <p>By Brian Cullen</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="Title">
+                    <p>Number 5</p>
+                </div>
+                <div class="Video">
+                    <p>Test</p>
+                </div>
+                <div class="Text">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
+                </div>
+                <div class="Author">
+                    <p>By Brian Cullen</p>
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="Title">
-                <p>Number 2</p>
-            </div>
-            <div class="Video">
-                <p>Video</p>
-            </div>
-            <div class="Text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
-            </div>
-            <div class="Author">
-                <p>By Brian Cullen</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="Title">
-                <p>Number 3</p>
-            </div>
-            <div class="Video">
-                <p>Test</p>
-            </div>
-            <div class="Text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
-            </div>
-            <div class="Author">
-                <p>By Brian Cullen</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="Title">
-                <p>Number 4</p>
-            </div>
-            <div class="Video">
-                <p>Test</p>
-            </div>
-            <div class="Text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
-            </div>
-            <div class="Author">
-                <p>By Brian Cullen</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="Title">
-                <p>Number 5</p>
-            </div>
-            <div class="Video">
-                <p>Test</p>
-            </div>
-            <div class="Text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laudantium deserunt autem assumenda reprehenderit iste aliquam libero, ratione id laborum rem placeat eos incidunt voluptatibus nobis omnis commodi optio. Expedita!</p>
-            </div>
-            <div class="Author">
-                <p>By Brian Cullen</p>
+        <h2>Bento Box Layout</h2>
+        <div>
+            <div class="bento">
+                <div class="box box1">1</div>
+                <div class="box box2">2</div>
+                <div class="box box3">3</div>
+                <div class="box box4">4</div>
+                <div class="box box5">5</div>
+
             </div>
         </div>
     </div>
-    <h2>Bento Box Layout</h2>
-    <div class="bento-area">
-        <div class="bento">
-            <div class="box box1">1</div>
-            <div class="box box2">2</div>
-            <div class="box box3">3</div>
-            <div class="box box4">4</div>
-            <div class="box box5">5</div>
-
-        </div>
-    </div>
-
 </body>
 </html>
