--- a/test_colours.html
+++ b/test_colours.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <h2>Bento Box Layout</h2>
-        <div>
+        <div class="bento-area">
             <div class="bento">
                 <div class="box box1">1</div>
                 <div class="box box2">2</div>
