--- a/test_colours.html
+++ b/test_colours.html
@@ -10,6 +10,7 @@
     <nav>
         <ul>
             <li class="home-li"><a href="index.html">Home</a></li>
+            <li><a href="expand.html">Expand</a></li>
             <li><a href="test_colours.html" class="active-link">Colours Test</a></li>
             <li><a href="test_colours.html" class="accent-link">Login</a></li>
         </ul>
